fixed profile section to display with more contrast, added log out button transform, fixed auth page header

--- a/src/recipe-list/recipeList.css
+++ b/src/recipe-list/recipeList.css
@@ -29,7 +29,8 @@ a:hover {
 }
 
 a img {
-    border-radius: 0;
+    max-height: 200px;
+    object-fit: contain;
 }
 
 #list-container{
